Changelog
=========

1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2013-01-13)
------------------

- There was a problem with the charset regular expression, it expected one
  space, and only one, between mimetype and charset. So a valid values like
  "text/html;charset=utf-8" didn't match and default_encoding was returned.
  We fixed it by allowing any number of spaces (including zero).
  [jpgimenez]


1.0.2 (2012-01-26)
------------------

- Fix packaging error.
  [esteele]


1.0.1 (2012-01-26)
------------------

- Compute error_status and store it on request.
  Work around bug with Zope 2.13 publication events :
  response.status is not set when IPubBeforeAbort is notified.
  [gotcha]

- Don't transform FTP requests
  [rochecompaan]

1.0 - 2011-05-13
----------------

- Release 1.0 Final.
  [esteele]

1.0b1 - 2010-04-21
------------------

- Initial release
