@@ -4,7 +4,8 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow disabling transformchain by request header "DISABLE_PLONE_TRANSFORM"
+  [tomgross]
 
 
 1.0.3 (2013-01-13)
